html inicial pagina-inicio

--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Carrera de palabras - Inicio</title>
 </head>
 <body>
-$END$
+    <h1>Bienvenido al juego de Carrera de Palabras</h1>
+    <div>
+        <h1>Instrucciones</h1>
+        <h2>Instrucciones aquí</h2>
+    </div>
+    <button>
+        Comenzar juego
+    </button>
+
+
 </body>
 </html>
