html y css inicial

--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Carrera de palabras - Inicio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Bienvenido al juego de Carrera de Palabras</h1>
-    <div>
+    <div id="titulo">
+        <h1>Bienvenido al juego de Carrera de Palabras</h1>
+    </div>
+    <div id="instrucciones">
         <h1>Instrucciones</h1>
         <h2>Instrucciones aquí</h2>
     </div>
     <button>
         Comenzar juego
     </button>
-
-
 </body>
 </html>
