html y css inicial cambios

--- a/index.html
+++ b/index.html
@@ -11,7 +11,23 @@
     </div>
     <div id="instrucciones">
         <h1>Instrucciones</h1>
-        <h2>Instrucciones aquí</h2>
+            <h2>Objetivo</h2>
+                <h3>Objetivo</h3>
+            <h2>¿Cómo jugar?</h2>
+                <h3>¿Cómo jugar?</h3>
+            <h2>Entrada</h2>
+                <h3>Entrada</h3>
+            <h2>Tiempo</h2>
+                <h3>Tiempo</h3>
+            <h2>Envío</h2>
+                <h3>Envío</h3>
+            <h2>Vidas</h2>
+                <h3>Vidas</h3>
+            <h2>Niveles</h2>
+                <h3>Niveles</h3>
+            <h2>Fin de juego</h2>
+                <h3>Fin de juego</h3>
+
     </div>
     <button>
         Comenzar juego
