html y css juego

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h3>Fin de juego</h3>
 
     </div>
-    <button>
+    <button onclick="location.href='juego.html'">
         Comenzar juego
     </button>
 </body>
