--- a/juego.html
+++ b/juego.html
@@ -8,14 +8,14 @@
 <body>
     <div id="menu">
         <button>Reiniciar</button>
-        <button>Inicio</button>
+        <button onclick="location.href='index.html'">Inicio</button>
     </div>
     <div id="contenedor1">
         <div id="vidas">Vidas: <span id="contarVidas">3</span></div>
         <div id="nivel">Nivel: <span id="contarNivel">1</span></div>
-        <div id="instrucciones">Escribe la palabra que aparece antes de que desaparezca:</div>
         <div id="tiempoRestante">Tiempo restante: <span id="contarTiempoRestante"></span></div>
     </div>
+    <div id="instrucciones">Escribe la palabra que aparece antes de que desaparezca:</div>
     <div id="palabra"></div>
     <input type="texto" id="usuarioInput" placeholder="Escribe aquí la palabra..." autofocus>
     <div id="resultado"></div>
