contador palabras correctas

--- a/juego.html
+++ b/juego.html
@@ -14,6 +14,7 @@
         <div id="vidas">Vidas: <span id="contarVidas">3</span></div>
         <div id="nivel">Nivel: <span id="contarNivel">1</span></div>
         <div id="tiempoRestante">Tiempo restante: <span id="contarTiempoRestante"></span></div>
+        <div id="palabrasCorrectas">Palabras correctas: <span id="contarPalabrasCorrectas">0</span></div>
     </div>
     <div id="palabra"></div>
     <div id="instrucciones">Escribe la palabra que aparece antes de que desaparezca:</div>
