cambios + reiniciar juego

--- a/juego.html
+++ b/juego.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="menu">
-        <button>Reiniciar</button>
+        <button onclick="reiniciarJuego()">Reiniciar</button>
         <button onclick="location.href='index.html'">Inicio</button>
     </div>
     <div id="contenedor1">
