--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Honk&family=Jersey+10+Charted&family=Jersey+20+Charted&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Press+Start+2P&family=Special+Elite&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Carrera de palabras - Inicio</title>
     <link rel="stylesheet" href="style.css">
