--- a/juego.html
+++ b/juego.html
@@ -10,6 +10,7 @@
         <button onclick="reiniciarJuego()">Reiniciar</button>
         <button onclick="location.href='index.html'">Inicio</button>
     </div>
+    <div>
     <div id="contenedor1">
         <div id="vidas">Vidas: <span id="contarVidas">3</span></div>
         <div id="nivel">Nivel: <span id="contarNivel">1</span></div>
