--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Honk&family=Jersey+10+Charted&family=Jersey+20+Charted&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Press+Start+2P&family=Special+Elite&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Honk&family=Jersey+10+Charted&family=Jersey+20+Charted&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Press+Start+2P&family=Special+Elite&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Carrera de palabras - Inicio</title>
     <link rel="stylesheet" href="style.css">
