--- a/juego.html
+++ b/juego.html
@@ -6,22 +6,24 @@
   <link rel="stylesheet" href="juego.css">
 </head>
 <body>
-    <div id="menu">
-        <button onclick="reiniciarJuego()">Reiniciar</button>
-        <button onclick="location.href='index.html'">Inicio</button>
+    <div id="tablero">
+        <div id="contenedor1">
+            <div id="vidas">Vidas: <span id="contarVidas">3</span></div>
+            <div id="nivel">Nivel: <span id="contarNivel">1</span></div>
+            <div id="palabrasCorrectas">Aciertos: <span id="contarPalabrasCorrectas">0</span></div>
+        </div>
+            <div id="tiempoRestante">Tiempo: <span id="contarTiempoRestante"></span></div>
+        <div id="central">
+            <div id="palabra"></div>
+            <div id="instrucciones">Escribe la palabra que aparece antes de que desaparezca:</div>
+            <input type="texto" id="usuarioInput" placeholder="Escribe aquí la palabra..." autofocus>
+            <div id="resultado"></div>
+        </div>
+        <div id="menu">
+            <button onclick="reiniciarJuego()">Reiniciar</button>
+            <button onclick="location.href='index.html'">Inicio</button>
+        </div>
     </div>
-    <div>
-    <div id="contenedor1">
-        <div id="vidas">Vidas: <span id="contarVidas">3</span></div>
-        <div id="nivel">Nivel: <span id="contarNivel">1</span></div>
-        <div id="tiempoRestante">Tiempo restante: <span id="contarTiempoRestante"></span></div>
-        <div id="palabrasCorrectas">Palabras correctas: <span id="contarPalabrasCorrectas">0</span></div>
-    </div>
-    <div id="palabra"></div>
-    <div id="instrucciones">Escribe la palabra que aparece antes de que desaparezca:</div>
-    <input type="texto" id="usuarioInput" placeholder="Escribe aquí la palabra..." autofocus>
-    <div id="resultado"></div>
-
     <script src="script.js"></script>
 </body>
 </html>
