--- a/index.html
+++ b/index.html
@@ -15,31 +15,26 @@
 <div id="instrucciones">
     <h1>Instrucciones</h1>
     <h2>Objetivo</h2>
-    <h3>Objetivo</h3>
+    <h3>Introduce la palabra que ves en la pantalla de manera correcta y esta se enviará automáticamente despues de escribirla</h3>
     <h2>¿Cómo jugar?</h2>
-    <h3>¿Cómo jugar?</h3>
-    <h2>Entrada</h2>
-    <h3>Entrada</h3>
+    <h3>Ingresa la palabra mostrada en la pantalla dentro del campo de texto (puedes usar mayúsculas o minúsculas)</h3>
     <h2>Tiempo</h2>
-    <h3>Tiempo</h3>
-    <h2>Envío</h2>
-    <h3>Envío</h3>
+    <h3>Puedes elegir el tiempo inicial (el tiempo es limitado para cada palabra). Al pasar de nivel el contador disminuirá 1 segundo. </h3>
     <h2>Vidas</h2>
-    <h3>Vidas</h3>
+    <h3>Puedes elegir el número de vidas iniciales, por cada error y límite de tiempo agotado pierdes una vida</h3>
     <h2>Niveles</h2>
-    <h3>Niveles</h3>
+    <h3>El juego se hace mas desafiante progresivamente. Pasas de nivel cada 5 palabras correctas y con cada nivel tendrás menos tiempo para escribir las palabras</h3>
     <h2>Fin de juego</h2>
-    <h3>Fin de juego</h3>
+    <h3>El juego termina cuando se te acaben las vidas</h3>
 
 </div>
 <div id="opciones">
     <!-- Selección tiempo -->
-    <select id="baseTiempo" onchange="document.getElementById('tiempoPersonalizado').style.display = this.value === 'personalizar' ? '' : 'none';">
+    <select id="baseTiempo">
         <option value="10000">10 segundos</option>
         <option value="7000" selected>7 segundos</option>
         <option value="5000">5 segundos</option>
         <option value="3000">3 segundos</option>
-        <!--    <option value="personalizar">Personalizar</option>-->
     </select>
     <!-- Selección vidas -->
     <select id="vidasBase">
@@ -50,8 +45,7 @@
         <option value="2">2 vidas</option>
         <option value="1">1 vida</option>
     </select>
-    <!--<input type="numero" id="tiempoPersonalizado" placeholder="Tiempo personalizado (Segundos)" min="2" step="1" style="display: none">-->
-    <button onclick="empezarJuegoTiempoPersonalizado()">
+    <button onclick="empezarJuegoSeleccion()">
         Comenzar juego
     </button>
 </div>
