--- a/juego.html
+++ b/juego.html
@@ -18,7 +18,7 @@
             <div id="tiempoRestante">Tiempo: <span id="contarTiempoRestante"></span></div>
         <div id="central">
             <div id="palabra"></div>
-            <div id="instrucciones">Escribe la palabra que aparece antes de que desaparezca:</div>
+            <div id="instruccion">Escribe la palabra que aparece antes de que desaparezca:</div>
             <input type="texto" id="usuarioInput" placeholder="Escribe aquí la palabra..." autofocus>
             <div id="resultado"></div>
         </div>
